oss-knowledge-gitops/backend/meta-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oss-knowledge-meta-api
  labels:
    app: oss-knowledge-meta-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: oss-knowledge-meta-api
